testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail01a.stderr

overloadedrecfldsfail01a.hs:13:10: error: [GHC-99339]
    • Ambiguous record update with field ‘x’
      This field appears in all of the datatypes ‘R’, ‘S’ and ‘T’
    • In the expression: r {x = 3}
      In an equation for ‘upd1’: upd1 r = r {x = 3}
